WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
137581
[iOS] DumpRenderTree fails to render every other test when pixel tests are on
https://bugs.webkit.org/show_bug.cgi?id=137581
Summary
[iOS] DumpRenderTree fails to render every other test when pixel tests are on
David Farler
Reported
2014-10-09 16:04:56 PDT
When running DumpRenderTree with --pixel-tests, PNG data gets dumped to stdout before the test has finished rendering. This happens regardless of whether the iOS app is in the foreground or background. The consequence: 1. When running the first pixel test "A" on a freshly launched DRT, you get a blank image. 2. Running subsequent test "B" is "one behind", and the previous contents for test "A" are dumped, although "B" does eventually appear in app. Steps to reproduce: Build iOS for iphonesimulator open -a $(xcode-select --print-path)/Applications/iOS\ Simulator.app DYLD_FRAMEWORK_PATH=/absolute/path/to/OpenSource/WebKitBuild/Release-iphonesimulator DYLD_LIBRARY_PATH=/absolute/path/to/OpenSource/WebKitBuild/Release-iphonesimulator /path/to/OpenSource/WebKitBuild/Release/LayoutTestRelay -runtime com.apple.CoreSimulator.SimRuntime.iOS-8-3 -deviceType com.apple.CoreSimulator.SimDeviceType.iPhone-5s -suffix 0 -productDir /absolute/path/to/OpenSource/WebKitBuild/Release-iphonesimulator -app /absolute/path/to/OpenSource/WebKitBuild/Release-iphonesimulator/DumpRenderTree.app -- --pixel-test - | tee /tmp/test.txt # Now listening to stdin, paste the following twice /absolute/path/to/OpenSource/LayoutTests/compositing/regions/fixed-in-named-flow-position-changed.html ^C Now, there will be two PNGs in /tmp/test.txt - paste each into their own image files. Observe.
Attachments
Patch
(2.10 KB, patch)
2014-12-05 10:44 PST
,
Daniel Bates
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
David Farler
Comment 1
2014-10-09 16:07:10 PDT
Specify your `-runtime` as necessary
David Farler
Comment 2
2014-10-15 10:07:13 PDT
Another effect that I noticed here after smfr's change to wait for the web thread is that if you keep passing in tests with pixel dumps requested, essentially every other test will do the right thing, otherwise resetting to a blank view. Before, it would always be "one behind." So, there's still some state getting in the way. This behavior only happens with --pixel-tests passed at the command line to DumpRenderTree (all tests in server loop mode are pixel tests), or '-p is appended to individual tests in server loop mode. In light of this, I'm retitling the bug to reflect this.
David Farler
Comment 3
2014-10-15 10:07:36 PDT
<
rdar://problem/18642906
>
Daniel Bates
Comment 4
2014-12-05 10:44:37 PST
Created
attachment 242643
[details]
Patch
Daniel Bates
Comment 5
2014-12-05 14:12:46 PST
Comment on
attachment 242643
[details]
Patch Clearing flags on attachment: 242643 Committed
r176872
: <
http://trac.webkit.org/changeset/176872
>
Daniel Bates
Comment 6
2014-12-05 14:12:52 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug