[iOS] DumpRenderTree fails to render every other test when pixel tests are on https://bugs.webkit.org/show_bug.cgi?id=137581 <rdar://problem/18642906>

Reviewed by Simon Fraser.

Fixes an issue where the DumpRenderTree snapshot may reflect the rendered content
of the test that proceeded the currently running test.

* DumpRenderTree/ios/PixelDumpSupportIOS.mm:
(dumpWebViewAsPixelsAndCompareWithExpected): Ensure that UIKit has performed a layout
of the UIWebBrowserView view. Also, remove unnecessary call to -[UIWebDocumentView layoutTilesNow]
as -[UIWebDocumentView newSnapshotWithRect] will layout the tiles.

Canonical link: https://commits.webkit.org/157166@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@176872 268f45cc-cd09-0410-ab3c-d52691b4dbfc